test/must_fail/api/must_fail_hint_buffer.ngjs
#!/usr/bin/env ngspicejs
// no args needed
// linter: ngspicejs-lint
"use strict";

hint('one');
hint('two');
echo('echo');
echo(Internal.hint_buffer(123));

